v3.8.5 (XXXX-XX-XX)
-------------------

* BTS-624: The `move-calculations-up` optimization rule is now also applied to
  subqueries, when they don't have dependencies on the outer nodes, don't have
  modification nodes and don't read their own writes. This fixed the execution
  of a query without the splicing-subqueries option being faster than the
  execution of a query with this option (after version 3.8, this option cannot
  be switched off). 

* Added the following metrics for revision trees:
  - `arangodb_revision_tree_hibernations_total`: number of times a revision tree
    was compressed in RAM and set to hibernation
  - `arangodb_revision_tree_resurrections_total`: number of times a revision
    tree was resurrected from hibernation and uncompressed in RAM
  - `arangodb_revision_tree_memory_usage`: total memory usage (in bytes) by all
    active revision trees

* Added metric `rocksdb_wal_sequence` to track the current tip of the WAL's
  sequence number.


v3.8.4 (2021-11-30)
-------------------

* Cleanup and properly fail hotbackup upload and download jobs if a dbserver
  fails or is restarted during the transfer. This gets rid of upload and
  download blockages in these circumstances.

* Reduce memory usage for in-memory revision trees. Previously, a revision tree
  instance for a non-empty collection/shard was using 4 MB of memory when
  uncompressed. Trees that were unused for a while were compressed on the fly to
  use less memory, and later uncompressed again when needed.
  Now the uncompressed in-memory version of the revision tree will dynamically
  allocate memory as needed. This allows the initial version of the trees to get
  away with just 64 KB of memory. Memory usage will grow lazily when more parts
  of the trees get populated. The compression of unused in-memory tree data is
  still in place.

* Make `db.<collection>.figures(true)` operate on the same snapshot when
  counting the number of documents in the documents column family and the