@@ -105,7 +105,9 @@ class BreadthFirstEnumerator final : public arangodb::traverser::PathEnumerator 
                          arangodb::traverser::TraverserOptions* opts);
 
   ~BreadthFirstEnumerator();
-  
+
+  void clear() final;
+
   void setStartVertex(arangodb::velocypack::StringRef startVertex) override;
 
   /// @brief Get the next Path element from the traversal.
