@@ -1,6 +1,10 @@
 v3.8.5 (XXXX-XX-XX)
 -------------------
 
+* Fix GitHub issue #15084. Fixed a potential use-after-free on Windows for
+  queries that used the NeighborsEnumerator (though other PathEnumerators might
+  have been affected as well).
+
 * BTS-624: The `move-calculations-up` optimization rule is now also applied to
   subqueries, when they don't have dependencies on the outer nodes, don't have
   modification nodes and don't read their own writes. This fixed the execution
